Vouchers generation added

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,14 @@
         "cakephp/plugin-installer": "*",
 		"symfony/console": "3.1.0",
         "akkaweb/cakephp-facebook": "dev-master",
-        "josegonzalez/cakephp-upload": "^3.4"
+        "josegonzalez/cakephp-upload": "^3.6",
+        "blueimp/jquery-file-upload": "^9.12",
+        "hashmode/cakephp-jquery-file-upload": "^1.0",
+        "alaxos/cakephp3-libs": "^1.0",
+        "friendsofcake/CakePdf": "^3.2",
+        "dompdf/dompdf": "^0.7.0",
+        "tecnickcom/tcpdf": "^6.2",
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "psy/psysh": "@stable",
@@ -24,9 +31,13 @@
         "cakephp/cakephp-codesniffer": "Allows to check the code against the coding standards used in CakePHP."
     },
     "autoload": {
+         "classmap": [
+            "vendor/blueimp/jquery-file-upload/server/php"
+        ],    
         "psr-4": {
             "App\\": "src"
         }
+
     },
     "autoload-dev": {
         "psr-4": {
@@ -37,7 +48,8 @@
     "scripts": {
         "post-install-cmd": "App\\Console\\Installer::postInstall",
         "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump"
+        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
+        "post-update-cmd": "CakephpJqueryFileUpload\\Console\\Installer::postUpdate"
     },
     "minimum-stability": "stable",
     "prefer-stable": true
