Fixed Voucher using DOMPDF

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /webroot/files/Merchants/photo/1919191_448768838649242_3485770298669045288_n.jpg
 /webroot/files/Merchants/photo/13407073_516264911892388_7880226033927388938_n.jpg
 /webroot/files/Merchants/photo/#2-13244697_279458759062394_5006675168115144969_n.jpg
+/webroot/fnb
+/webroot/test
