Checked In CakePdf plugin

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /webroot/files/Merchants/photo/#2-13244697_279458759062394_5006675168115144969_n.jpg
 /webroot/fnb
 /webroot/test
+
+/webroot/files/Vouchers/1.png
