--- a/.gitignore
+++ b/.gitignore
@@ -4,35 +4,10 @@
 /logs/*
 
 /src/Template/Companies
-/webroot/files/Deals/photo/Jellyfish.jpg
-/webroot/files/Deals/photo/Tulips.jpg
-/webroot/files/Deals/photo/rock.jpg
-/webroot/files/Deals/photo/River.jpg
-/webroot/files/Deals/photo/Lighthouse.jpg
-/webroot/files/Deals/photo/Koala.jpg
-/webroot/files/uploads/thumbnail/Aug (1).PNG
-/webroot/files/uploads/downgrade1.png
-/webroot/files/uploads/CaptureJobDetail.PNG
-/webroot/files/uploads/C++-icon.png
-/webroot/files/uploads/Aug.PNG
-/webroot/files/uploads/Aug (1).PNG
-/webroot/files/uploads/thumbnail/downgrade1.png
-/webroot/files/uploads/thumbnail/CaptureJobDetail.PNG
-/webroot/files/uploads/thumbnail/C++-icon.png
-/webroot/files/uploads/thumbnail/Aug.PNG
-/webroot/files/Merchants/photo/#1-13233048_279459582395645_406833125984898726_n.jpg
-/webroot/files/Merchants/photo/your-company-logo.png
-/webroot/files/Merchants/photo/Untitled.jpg
-/webroot/files/Merchants/photo/mmexport1467076085224.jpg
-/webroot/files/Merchants/photo/GurneyPlaza.jpg
-/webroot/files/Merchants/photo/company-name-vector-logo1.jpg
-/webroot/files/Merchants/photo/Chrysanthemum.jpg
-/webroot/files/Merchants/photo/avenue1.jpg
-/webroot/files/Merchants/photo/2013_June_Ideas_WorkingParentsWishlist_Image011.jpg
-/webroot/files/Merchants/photo/1919191_448768838649242_3485770298669045288_n.jpg
-/webroot/files/Merchants/photo/13407073_516264911892388_7880226033927388938_n.jpg
-/webroot/files/Merchants/photo/#2-13244697_279458759062394_5006675168115144969_n.jpg
+/webroot/files/Deals/photo
+/webroot/files/uploads
+/webroot/files/uploads/thumbnail
+/webroot/files/Merchants/photo
 /webroot/fnb
 /webroot/test
-
-/webroot/files/Vouchers/1.png
+/webroot/files/Vouchers
