Shopping Cart Table Added

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /webroot/files/uploads
 /webroot/files/uploads/thumbnail
 /webroot/files/Merchants/photo
-/webroot/fnb
+/webroot/license
 /webroot/test
 /webroot/files/Vouchers
 /PayPal.log
